--- a/server/config.json
+++ b/server/config.json
@@ -1,5 +1,5 @@
 {
-  "host": "invented-indigo-giant.glitch.me",
+  "host": "carrassot2.glitch.me",
   "servesStatic": true,
   "port": 3000,
   "networkUpdateFactor": 24,
@@ -15,25 +15,23 @@
   "HEIGHT": 6500,
   "MODE": "ffa",
   "TEAMS": 4,
-  "RANDOM_COLORS": false,
+  "RANDOM_COLORS": true,
   "ARENA_TYPE": "rect",
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
   "ROOM_SETUP": [
-      [ "norm", "norm", "norm", "norm", "norm", "norm", "roid", "norm", "norm", "norm", "norm", "norm" ],
-      [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-      [ "norm", "norm", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "norm", "norm" ],
-      [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-      [ "norm", "norm", "norm", "norm", "nest", "nest", "nest", "nest", "norm", "norm", "norm", "norm" ],
-      [ "norm", "norm", "norm", "norm", "nest", "nest", "nest", "nest", "norm", "norm", "norm", "norm" ],
-      [ "roid", "norm", "norm", "norm", "nest", "nest", "nest", "nest", "norm", "norm", "norm", "roid" ],
-      [ "norm", "norm", "norm", "norm", "nest", "nest", "nest", "nest", "norm", "norm", "norm", "norm" ],
-      [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-      [ "norm", "norm", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "norm", "norm" ],
-      [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-      [ "norm", "norm", "norm", "norm", "norm", "norm", "roid", "norm", "norm", "norm", "norm", "norm" ]
-    ],
-  "X_GRID": 12,
-  "Y_GRID": 12,
+    [ "wall", "wall", "wall", "norm", "norm", "norm", "norm", "wall", "wall", "wall" ],
+    [ "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall" ],
+    [ "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall" ],
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
+    [ "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall" ],
+    [ "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall" ],
+    [ "wall", "wall", "wall", "norm", "norm", "norm", "norm", "wall", "wall", "wall" ]
+  ],
+  "X_GRID": 10,
+  "Y_GRID": 10,
   "DAMAGE_CONSTANT": 0.5,
   "KNOCKBACK_CONSTANT": 1.5,
   "ROOM_BOUND_FORCE": 0.01,
@@ -70,13 +68,13 @@
   "NEST_FOOD_AMOUNT": 1.5, 
   "CRASHER_RATIO": 2,
   "SKILL_BOOST": 5,
-  "BOTS": 9,
+  "BOTS": 0,
   "GLASS_HEALTH_FACTOR": 2,
   "SPECIAL_BOSS_SPAWNS": false,
   "MOTHERSHIP_LOOP": false,
   "SPACE_PHYSICS": false,
   "SPACE_MODE": false,
-  "MAZE": false,
+  "MAZE": true,
   "DOMINATOR_LOOP": false,
   "secondaryGameMode": "z",
   "GROUPS": false,
