🍙🏚 Checkpoint ./server/config.json:21793105/57 ./server/modules/setup/config.js:21793105/29 ./server/lib/definitions.js:21793105/846196 ./server/permissions.json:21793105/569 ./server/index.js:21793105/2

--- a/server/config.json
+++ b/server/config.json
@@ -11,9 +11,9 @@
   "runSpeed": 1.5,
   "maxHeartbeatInterval": 300000,
   "verbose": true,
-  "WIDTH": 6500,
-  "HEIGHT": 6500,
-  "MODE": "ffa",
+  "WIDTH": 2500,
+  "HEIGHT": 2500,
+  "MODE": "Normal",
   "TEAMS": 4,
   "RANDOM_COLORS": true,
   "ARENA_TYPE": "rect",
