🎁🏙 Checkpoint ./server/config.json:21793105/4478 ./server/permissions.json:21793105/649

--- a/server/config.json
+++ b/server/config.json
@@ -7,33 +7,43 @@
   "networkFrontlog": 1,
   "networkFallbackTime": 150,
   "visibleListInterval": 250,
-  "gameSpeed": 1,
-  "runSpeed": 1.5,
+  "gameSpeed": 1.125,
+  "runSpeed": 1,
   "maxHeartbeatInterval": 300000,
   "verbose": true,
-  "WIDTH": 2500,
-  "HEIGHT": 2500,
+  "WIDTH": 6500,
+  "HEIGHT": 6500,
   "MODE": "Normal",
   "TEAMS": 4,
   "RANDOM_COLORS": true,
   "ARENA_TYPE": "rect",
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
   "ROOM_SETUP": [
-    [ "wall", "wall", "wall", "norm", "norm", "norm", "norm", "wall", "wall", "wall" ],
-    [ "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall" ],
-    [ "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall" ],
-    [ "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall" ],
-    [ "wall", "wall", "wall", "norm", "norm", "norm", "norm", "wall", "wall", "wall" ]
+    [ "wall", "wall", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "wall", "wall" ],
+    [ "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall" ],
+    [ "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall" ],
+    [ "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall" ],
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
+    [ "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall" ],
+    [ "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall" ],
+    [ "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall" ],
+    [ "wall", "wall", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "wall", "wall" ]
   ],
-  "X_GRID": 10,
-  "Y_GRID": 10,
-  "DAMAGE_CONSTANT": 0.5,
-  "KNOCKBACK_CONSTANT": 1.5,
+  "X_GRID": 20,
+  "Y_GRID": 20,
+  "DAMAGE_CONSTANT": 0.6,
+  "KNOCKBACK_CONSTANT": 1,
   "ROOM_BOUND_FORCE": 0.01,
   "FOOD": [
     0, 
