📟🚋 Checkpoint ./server/config.json:21793105/712 ./public/lib/gameDraw.js:21793105/9 ./server/lib/definitions.js:21793105/25

--- a/server/config.json
+++ b/server/config.json
@@ -23,18 +23,18 @@
     [ "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall" ],
     [ "wall", "wall", "wall", "wall", "wall", "wall", "norm", "norm", "norm", "wall", "wall", "norm", "norm", "norm", "wall", "wall", "wall", "wall", "wall", "wall" ],
     [ "wall", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "wall" ],
-    [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
+    [ "wall", "wall", "wall", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "wall", "wall", "wall" ],
+    [ "wall", "wall", "wall", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "wall", "wall", "wall" ],
+    [ "wall", "wall", "norm", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "norm", "wall", "wall" ],
     [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
     [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
-    [ "wall", "wall", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "norm", "norm", "norm", "norm", "wall", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "wall", "norm", "norm", "norm", "norm", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "wall", "wall" ],
+    [ "wall", "wall", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "nest", "nest", "wall", "norm", "norm", "norm", "norm", "wall", "wall", "wall", "wall" ],
+    [ "wall", "wall", "wall", "wall", "norm", "norm", "norm", "norm", "wall", "nest", "nest", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "wall", "wall" ],
     [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
     [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
-    [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
-    [ "wall", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "wall" ],
+    [ "wall", "wall", "norm", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "norm", "wall", "wall" ],
+    [ "wall", "wall", "wall", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "wall", "wall", "wall" ],
+    [ "wall", "wall", "wall", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "wall", "wall", "wall" ],
     [ "wall", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "wall" ],
     [ "wall", "wall", "wall", "wall", "wall", "wall", "norm", "norm", "norm", "wall", "wall", "norm", "norm", "norm", "wall", "wall", "wall", "wall", "wall", "wall" ],
     [ "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall", "wall" ],
