🐈🕌 Checkpoint ./server/lib/definitions.js:21793105/254 ./server/config.json:21793105/200

--- a/server/config.json
+++ b/server/config.json
@@ -26,12 +26,12 @@
     [ "wall", "wall", "wall", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "wall", "wall", "wall" ],
     [ "wall", "wall", "wall", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "wall", "wall", "wall" ],
     [ "wall", "wall", "norm", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "norm", "wall", "wall" ],
-    [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
-    [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
-    [ "wall", "wall", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "nest", "nest", "wall", "norm", "norm", "norm", "norm", "wall", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "wall", "norm", "norm", "norm", "norm", "wall", "nest", "nest", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "wall", "wall" ],
-    [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
-    [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
+    [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "nest", "nest", "nest", "nest", "nest", "nest", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
+    [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "nest", "wall", "wall", "wall", "wall", "nest", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
+    [ "wall", "wall", "wall", "wall", "norm", "norm", "norm", "nest", "norm", "norm", "norm", "wall", "nest", "norm", "norm", "norm", "wall", "wall", "wall", "wall" ],
+    [ "wall", "wall", "wall", "wall", "norm", "norm", "norm", "nest", "wall", "norm", "norm", "norm", "nest", "norm", "norm", "norm", "wall", "wall", "wall", "wall" ],
+    [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "nest", "wall", "wall", "wall", "wall", "nest", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
+    [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "nest", "nest", "nest", "nest", "nest", "nest", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
     [ "wall", "wall", "norm", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "norm", "wall", "wall" ],
     [ "wall", "wall", "wall", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "wall", "wall", "wall" ],
     [ "wall", "wall", "wall", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "wall", "wall", "wall" ],
