--- a/server/config.json
+++ b/server/config.json
@@ -27,10 +27,10 @@
     [ "wall", "wall", "wall", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "wall", "wall", "wall" ],
     [ "wall", "wall", "norm", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "norm", "wall", "wall" ],
     [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "nest", "nest", "nest", "nest", "nest", "nest", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
-    [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "nest", "wall", "wall", "wall", "wall", "nest", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
+    [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "nest", "wall", "wall", "norm", "wall", "nest", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
     [ "wall", "wall", "wall", "wall", "norm", "norm", "norm", "nest", "norm", "norm", "norm", "wall", "nest", "norm", "norm", "norm", "wall", "wall", "wall", "wall" ],
     [ "wall", "wall", "wall", "wall", "norm", "norm", "norm", "nest", "wall", "norm", "norm", "norm", "nest", "norm", "norm", "norm", "wall", "wall", "wall", "wall" ],
-    [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "nest", "wall", "wall", "wall", "wall", "nest", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
+    [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "nest", "wall", "norm", "wall", "wall", "nest", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
     [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "nest", "nest", "nest", "nest", "nest", "nest", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
     [ "wall", "wall", "norm", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "norm", "wall", "wall" ],
     [ "wall", "wall", "wall", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "wall", "wall", "wall" ],
