--- a/public/lib/json/manifest.json
+++ b/public/lib/json/manifest.json
@@ -2,7 +2,7 @@
     "name": "carrassot",
     "theme_color": "#ff7700",
     "background_color": "#484948",
-    "description": "carrassot is a mod of arras.io, it adds new custom tanks and a boss to fight at the center!",
+    "description": "carrassot is a mod of arras.io, it adds new custom tanks, a boss to fight at the center, insane custom shapes, an much more!",
     "orientation": "landscape",
     "start_url": "/",
     "scope": "/",
