--- a/server/config.json
+++ b/server/config.json
@@ -15,33 +15,18 @@
   "HEIGHT": 6500,
   "MODE": "Normal",
   "TEAMS": 4,
-  "RANDOM_COLORS": true,
+  "RANDOM_COLORS": false,
   "ARENA_TYPE": "rect",
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
   "ROOM_SETUP": [
-    [ "wall", "wall", "wall", "wall", "wall", "wall", "wall", "norm", "wall", "wall", "wall", "wall", "norm", "wall", "wall", "wall", "wall", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "wall", "wall", "wall", "wall", "norm", "wall", "wall", "wall", "wall", "norm", "wall", "wall", "wall", "wall", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "wall", "wall", "wall", "norm", "norm", "norm", "wall", "wall", "norm", "norm", "norm", "wall", "wall", "wall", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "wall", "wall", "wall" ],
-    [ "wall", "wall", "norm", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "norm", "wall", "wall" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "nest", "nest", "nest", "nest", "nest", "nest", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "nest", "wall", "cent", "cent", "wall", "nest", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
-    [ "wall", "wall", "wall", "wall", "norm", "norm", "norm", "nest", "cent", "cent", "cent", "cent", "nest", "norm", "norm", "norm", "wall", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "wall", "norm", "norm", "norm", "nest", "cent", "cent", "cent", "cent", "nest", "norm", "norm", "norm", "wall", "wall", "wall", "wall" ],
-    [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "nest", "wall", "cent", "cent", "wall", "nest", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "nest", "nest", "nest", "nest", "nest", "nest", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "wall", "wall", "norm", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "norm", "wall", "wall" ],
-    [ "wall", "wall", "wall", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "wall", "wall", "wall", "norm", "norm", "norm", "wall", "wall", "norm", "norm", "norm", "wall", "wall", "wall", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "wall", "wall", "wall", "wall", "norm", "wall", "wall", "wall", "wall", "norm", "wall", "wall", "wall", "wall", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "wall", "wall", "wall", "wall", "norm", "wall", "wall", "wall", "wall", "norm", "wall", "wall", "wall", "wall", "wall", "wall", "wall" ]
+    [ "norm", "norm", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "norm", "norm" ],
+    [ "norm", "norm", "nest", "norm", "norm" ],
+    [ "norm", "norm", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "norm", "norm" ]
   ],
-  "X_GRID": 20,
-  "Y_GRID": 20,
+  "X_GRID": 5,
+  "Y_GRID": 5,
   "DAMAGE_CONSTANT": 0.6,
   "KNOCKBACK_CONSTANT": 1,
   "ROOM_BOUND_FORCE": 0.01,
