🚡🏰 Checkpoint ./server/config.json:34581100/5571 ./server/modules/setup/room.js:34581100/8 ./server/index.js:34581100/292 ./.glitch-assets:34581100/857 ./public/index.html:34581100/1108:40323686/71 ./server/lib/definitions.js:34581100/1281865 ./server/permissions.json:34581100/770 ./public/changelog.md:34581100/4273:40323686/34

--- a/server/config.json
+++ b/server/config.json
@@ -1,5 +1,5 @@
 {
-  "host": "carrassot2.glitch.me",
+  "host": "arrasrooms.glitch.me",
   "servesStatic": true,
   "port": 3000,
   "networkUpdateFactor": 24,
@@ -19,24 +19,30 @@
   "ARENA_TYPE": "rect",
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
   "ROOM_SETUP": [
-    [ "hyou", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "hyou" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "nest", "nest", "nest", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "nest", "nest", "nest", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "nest", "nest", "nest", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "hyou", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "hyou" ]
+    [ "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
+    [ "norm", "maze", "norm", "norm", "maze", "norm", "maze", "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm" ],
+    [ "norm", "maze", "maze", "maze", "maze", "norm", "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm" ],
+    [ "norm", "nest", "norm", "maze", "maze", "maze", "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm" ],
+    [ "norm", "maze", "norm", "maze", "norm", "norm", "maze", "norm", "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "maze", "norm", "maze", "maze", "norm", "norm", "norm", "maze", "maze", "norm", "norm", "maze", "maze", "maze", "norm", "norm", "norm" ],
+    [ "norm", "maze", "norm", "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "maze", "maze", "norm", "maze", "maze", "maze", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "maze", "maze", "norm", "maze", "norm", "norm", "norm" ],
+    [ "norm", "maze", "maze", "norm", "norm", "maze", "maze", "norm", "maze", "norm", "norm", "norm", "maze", "norm", "norm", "norm", "maze", "norm", "norm", "norm" ],
+    [ "norm", "maze", "norm", "norm", "norm", "maze", "norm", "maze", "maze", "maze", "norm", "norm", "maze", "norm", "norm", "norm", "maze", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "maze", "maze", "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "maze", "norm", "maze", "norm", "norm", "maze", "norm", "norm", "norm" ],
+    [ "norm", "maze", "norm", "maze", "norm", "maze", "norm", "norm", "norm", "maze", "norm", "maze", "norm", "maze", "norm", "norm", "maze", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "maze", "maze", "maze", "maze", "maze", "norm", "norm", "norm", "maze", "maze", "norm", "norm", "norm", "maze", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
+    [ "norm", "norm", "maze", "norm", "maze", "maze", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "maze", "maze", "norm", "maze", "norm", "norm", "norm" ],
+    [ "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "maze", "maze", "maze", "maze", "norm", "maze", "maze", "norm", "maze", "norm", "maze", "norm" ],
+    [ "norm", "norm", "maze", "maze", "maze", "norm", "maze", "norm", "norm", "maze", "maze", "maze", "maze", "norm", "norm", "norm", "maze", "norm", "maze", "norm" ],
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "maze", "norm", "maze", "maze", "norm", "norm", "norm", "maze", "norm", "maze", "norm" ],
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ] 
   ],
-  "X_GRID": 15,
-  "Y_GRID": 15,
+  "X_GRID": 20,
+  "Y_GRID": 20,
   "DAMAGE_CONSTANT": 0.6,
   "KNOCKBACK_CONSTANT": 1,
   "ROOM_BOUND_FORCE": 0.01,
