🚁🍄 Checkpoint ./server/index.js:34581100/501:40323686/9 ./server/config.json:40323686/9 ./public/index.html:40323686/766 ./discord.md:40323686/56 ./server/lib/random.js:34581100/1299 ./server/permissions.json:40323686/37 ./server/lib/definitions.js:34581100/35713

--- a/server/config.json
+++ b/server/config.json
@@ -13,7 +13,7 @@
   "verbose": true,
   "WIDTH": 6500,
   "HEIGHT": 6500,
-  "MODE": "ffa",
+  "MODE": "normal",
   "TEAMS": 4,
   "RANDOM_COLORS": false,
   "ARENA_TYPE": "rect",
