👦🌖 Checkpoint ./server/modules/gamemodes/bossRush.js:34581100/27 ./server/lib/definitions.js:34581100/243 ./server/permissions.json:34581100/26 ./public/changelog.md:34581100/16 ./server/config.json:34581100/76

--- a/server/config.json
+++ b/server/config.json
@@ -2,7 +2,11 @@
   "host": "arrasrooms.glitch.me",
   "servesStatic": true,
   "port": 3000,
-  "networkUpdateFactor": 24,
+  "tracking": {
+        "ip": true,
+        "fingerprint": true
+    },
+  "networkUpdateFactor": 256,
   "socketWarningLimit": 5,
   "networkFrontlog": 1,
   "networkFallbackTime": 150,
