--- a/server/config.json
+++ b/server/config.json
@@ -8,45 +8,28 @@
     },
   "networkUpdateFactor": 256,
   "socketWarningLimit": 5,
-  "networkFrontlog": 3,
+  "networkFrontlog": 1,
   "networkFallbackTime": 0,
   "visibleListInterval": 0,
-  "gameSpeed": 1.125,
+  "gameSpeed": 2,
   "runSpeed": 1.5,
   "maxHeartbeatInterval": 300000,
   "verbose": true,
-  "WIDTH": 6500,
-  "HEIGHT": 6500,
+  "WIDTH": 16000,
+  "HEIGHT": 4000,
   "MODE": "normal",
   "TEAMS": 4,
   "RANDOM_COLORS": false,
   "ARENA_TYPE": "rect",
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
   "ROOM_SETUP": [
-    [ "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "maze", "norm", "norm", "maze", "norm", "maze", "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm" ],
-    [ "norm", "maze", "maze", "maze", "maze", "norm", "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm" ],
-    [ "norm", "nest", "norm", "maze", "maze", "maze", "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm" ],
-    [ "norm", "maze", "norm", "maze", "norm", "norm", "maze", "norm", "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "maze", "norm", "maze", "maze", "norm", "norm", "norm", "maze", "maze", "norm", "norm", "maze", "maze", "maze", "norm", "norm", "norm" ],
-    [ "norm", "maze", "norm", "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "maze", "maze", "norm", "maze", "maze", "maze", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "maze", "maze", "norm", "maze", "norm", "norm", "norm" ],
-    [ "norm", "maze", "maze", "norm", "norm", "maze", "maze", "norm", "maze", "norm", "norm", "norm", "maze", "norm", "norm", "norm", "maze", "norm", "norm", "norm" ],
-    [ "norm", "maze", "norm", "norm", "norm", "maze", "norm", "maze", "maze", "maze", "norm", "norm", "maze", "norm", "norm", "norm", "maze", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "maze", "maze", "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "maze", "norm", "maze", "norm", "norm", "maze", "norm", "norm", "norm" ],
-    [ "norm", "maze", "norm", "maze", "norm", "maze", "norm", "norm", "norm", "maze", "norm", "maze", "norm", "maze", "norm", "norm", "maze", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "maze", "maze", "maze", "maze", "maze", "norm", "norm", "norm", "maze", "maze", "norm", "norm", "norm", "maze", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "norm", "maze", "norm", "maze", "maze", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "maze", "maze", "norm", "maze", "norm", "norm", "norm" ],
-    [ "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "maze", "maze", "maze", "maze", "norm", "maze", "maze", "norm", "maze", "norm", "maze", "norm" ],
-    [ "norm", "norm", "maze", "maze", "maze", "norm", "maze", "norm", "norm", "maze", "maze", "maze", "maze", "norm", "norm", "norm", "maze", "norm", "maze", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "maze", "norm", "maze", "maze", "norm", "norm", "norm", "maze", "norm", "maze", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "maze", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ] 
+    ["bas1", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
+    ["norm", "nest", "nest", "norm", "norm", "nest", "nest", "norm", "norm", "nest", "nest", "norm", "norm", "nest", "nest", "norm"],
+    ["norm", "nest", "nest", "norm", "norm", "nest", "nest", "norm", "norm", "nest", "nest", "norm", "norm", "nest", "nest", "norm"],
+    ["bas2", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"]
   ],
-  "X_GRID": 20,
-  "Y_GRID": 20,
+  "X_GRID": 16,
+  "Y_GRID": 4,
   "DAMAGE_CONSTANT": 0.6,
   "KNOCKBACK_CONSTANT": 1,
   "ROOM_BOUND_FORCE": 0.01,
@@ -73,17 +56,19 @@
   "TIER_1": 15,
   "TIER_2": 30,
   "TIER_3": 45,
-  "SKILL_CAP": 45,
+  "TIER_4": 60,
+  "TIER_5": 90,
+  "SKILL_CAP": 8192,
   "SKILL_SOFT_CAP": 0,
   "SKILL_CHEAT_CAP": 45,
   "SKILL_LEAK": 0,
   "STEALTH": 4,
   "MIN_SPEED": 0.001,
-  "FOOD_AMOUNT": 100,
-  "NEST_FOOD_AMOUNT": 1.5, 
+  "FOOD_AMOUNT": 50,
+  "NEST_FOOD_AMOUNT": 2.5, 
   "CRASHER_RATIO": 2,
   "SKILL_BOOST": 5,
-  "BOTS": 10,
+  "BOTS": 0,
   "GLASS_HEALTH_FACTOR": 2,
   "SPECIAL_BOSS_SPAWNS": false,
   "MOTHERSHIP_LOOP": false,
