--- a/server/configold.json
+++ b/server/configold.json
@@ -1,47 +1,39 @@
 {
-  "host": "carrassot2.glitch.me",
+  "host": "arrasbrokenreality.glitch.me",
   "servesStatic": true,
   "port": 3000,
-  "networkUpdateFactor": 24,
+  "tracking": {
+        "ip": true,
+        "fingerprint": true
+    },
+  "networkUpdateFactor": 256,
   "socketWarningLimit": 5,
   "networkFrontlog": 1,
-  "networkFallbackTime": 150,
-  "visibleListInterval": 250,
-  "gameSpeed": 1.125,
-  "runSpeed": 1,
+  "networkFallbackTime": 0,
+  "visibleListInterval": 0,
+  "gameSpeed": 1.150,
+  "runSpeed": 1.5,
   "maxHeartbeatInterval": 300000,
   "verbose": true,
   "WIDTH": 6500,
   "HEIGHT": 6500,
-  "MODE": "Normal",
+  "MODE": "normal",
   "TEAMS": 4,
-  "RANDOM_COLORS": true,
+  "RANDOM_COLORS": false,
   "ARENA_TYPE": "rect",
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
   "ROOM_SETUP": [
-    [ "wall", "wall", "wall", "wall", "wall", "wall", "wall", "norm", "wall", "wall", "wall", "wall", "norm", "wall", "wall", "wall", "wall", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "wall", "wall", "wall", "wall", "norm", "wall", "wall", "wall", "wall", "norm", "wall", "wall", "wall", "wall", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "wall", "wall", "wall", "norm", "norm", "norm", "wall", "wall", "norm", "norm", "norm", "wall", "wall", "wall", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "wall", "wall", "wall" ],
-    [ "wall", "wall", "norm", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "norm", "wall", "wall" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "nest", "nest", "nest", "nest", "nest", "nest", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "nest", "wall", "cent", "cent", "wall", "nest", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
-    [ "wall", "wall", "wall", "wall", "norm", "norm", "norm", "nest", "cent", "cent", "cent", "cent", "nest", "norm", "norm", "norm", "wall", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "wall", "norm", "norm", "norm", "nest", "cent", "cent", "cent", "cent", "nest", "norm", "norm", "norm", "wall", "wall", "wall", "wall" ],
-    [ "wall", "wall", "norm", "norm", "norm", "norm", "norm", "nest", "wall", "cent", "cent", "wall", "nest", "norm", "norm", "norm", "norm", "norm", "wall", "wall" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "nest", "nest", "nest", "nest", "nest", "nest", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "wall", "wall", "norm", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "norm", "wall", "wall" ],
-    [ "wall", "wall", "wall", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "norm", "rock", "rock", "rock", "norm", "norm", "norm", "norm", "norm", "norm", "rock", "rock", "rock", "norm", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "norm", "norm", "norm", "norm", "norm", "norm", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "wall", "wall", "wall", "norm", "norm", "norm", "wall", "wall", "norm", "norm", "norm", "wall", "wall", "wall", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "wall", "wall", "wall", "wall", "norm", "wall", "wall", "wall", "wall", "norm", "wall", "wall", "wall", "wall", "wall", "wall", "wall" ],
-    [ "wall", "wall", "wall", "wall", "wall", "wall", "wall", "norm", "wall", "wall", "wall", "wall", "norm", "wall", "wall", "wall", "wall", "wall", "wall", "wall" ]
+    ["norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
+    ["norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
+    ["norm", "norm", "norm", "nest", "nest", "norm", "norm", "norm"],
+    ["norm", "norm", "nest", "nest", "nest", "nest", "norm", "norm"],
+    ["norm", "norm", "nest", "nest", "nest", "nest", "norm", "norm"],
+    ["norm", "norm", "norm", "nest", "nest", "norm", "norm", "norm"],
+    ["norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"],
+    ["norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm"]
   ],
-  "X_GRID": 20,
-  "Y_GRID": 20,
+  "X_GRID": 8,
+  "Y_GRID": 8,
   "DAMAGE_CONSTANT": 0.6,
   "KNOCKBACK_CONSTANT": 1,
   "ROOM_BOUND_FORCE": 0.01,
@@ -68,17 +60,19 @@
   "TIER_1": 15,
   "TIER_2": 30,
   "TIER_3": 45,
-  "SKILL_CAP": 45,
+  "TIER_4": 60,
+  "TIER_5": 90,
+  "SKILL_CAP": 8192,
   "SKILL_SOFT_CAP": 0,
   "SKILL_CHEAT_CAP": 45,
   "SKILL_LEAK": 0,
   "STEALTH": 4,
   "MIN_SPEED": 0.001,
   "FOOD_AMOUNT": 100,
-  "NEST_FOOD_AMOUNT": 1.5, 
+  "NEST_FOOD_AMOUNT": 2.5, 
   "CRASHER_RATIO": 2,
   "SKILL_BOOST": 5,
-  "BOTS": 5,
+  "BOTS": 10,
   "GLASS_HEALTH_FACTOR": 2,
   "SPECIAL_BOSS_SPAWNS": false,
   "MOTHERSHIP_LOOP": false,
